@@ -268,8 +268,10 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
         local_peaktimes = numpy.unique(local_peaktimes)
 
         if ignore_dead_times:
-            local_peaktimes = numpy.array(list(set(local_peaktimes + t_offset).difference(all_dead_times)), dtype=numpy.int32) - t_offset
-            local_peaktimes = numpy.sort(local_peaktimes)
+            indices = numpy.searchsorted(all_dead_times, [t_offset, t_offset + len_chunk])
+            if indices[0] != indices[1]:
+                local_peaktimes = numpy.array(list(set(local_peaktimes + t_offset).difference(all_dead_times[indices[0]:indices[1]])), dtype=numpy.int32) - t_offset
+                local_peaktimes = numpy.sort(local_peaktimes)
 
         #print "Removing the useless borders..."
         local_borders   = (template_shift, len_chunk - template_shift)
